tests/valid/with-harmony.pmf
{
  "pmf_version": "1.0",
  "engine": "test-engine",
  "summary": "Minimal file with harmony section for validation testing.",
  "identity": {
    "seed": 99,
    "bpm": 130.0,
    "key": "D minor",
    "bars": 4
  },
  "render_key": {
    "sample_rate": 44100,
    "bars": 4,
    "stem_format": "mono",
    "loop_mode": "finite",
    "engine_version_major": 1
  },
  "harmony": {
    "progression": ["Dm", "Bb", "F", "C"],
    "progression_degrees": ["i", "VI", "III", "VII"],
    "progression_label": "minor turnaround in D"
  }
}
